# ChangeLog for app-arch/star
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/star/ChangeLog,v 1.83 2010/01/21 18:08:51 billie Exp $

  21 Jan 2010; Daniel Pielmeier <billie@gentoo.org> star-1.5.1.ebuild,
  metadata.xml:
  Add back symlinks needed for ppc64. Add myself to maintainers.

*star-1.5.1 (10 Dec 2009)

  10 Dec 2009; Peter Volkov <pva@gentoo.org> +star-1.5.1.ebuild:
  Version bump.

  09 Aug 2009; Samuli Suominen <ssuominen@gentoo.org> star-1.5.ebuild,
  +files/star-1.5-glibc-2.10.patch:
  Fix building with GLIBC 2.10+ wrt #276761.

  29 Oct 2008; Peter Volkov <pva@gentoo.org> -star-1.5_alpha87.ebuild,
  -star-1.5_alpha88.ebuild, -star-1.5_alpha89.ebuild:
  Remove old.

  24 May 2008; Markus Meier <maekke@gentoo.org> star-1.5.ebuild:
  remove unneded cp for amd64 in src_unpack. amd64 stable, bug #222789

  20 May 2008; Markus Rothe <corsair@gentoo.org> star-1.5.ebuild:
  Stable on ppc64; bug #222789

  20 May 2008; Raúl Porcel <armin76@gentoo.org> star-1.5.ebuild:
  alpha/ia64 stable wrt #222789

  20 May 2008; Ferris McCormick <fmccor@gentoo.org> star-1.5.ebuild:
  Sparc stable --- Bug #222789 --- it can read, extract, and create .tar files.

  20 May 2008; Dawid Węgliński <cla@gentoo.org> star-1.5.ebuild:
  Stable on x86 (bug #222789)

  20 May 2008; Jeroen Roovers <jer@gentoo.org> star-1.5.ebuild:
  Stable for HPPA (bug #222789).

  19 May 2008; nixnut <nixnut@gentoo.org> star-1.5.ebuild:
  Stable on ppc wrt bug 222789

  06 May 2008; Peter Volkov <pva@gentoo.org> star-1.5_alpha88.ebuild:
  amd64 stable, bug #216658. Thank Víctor Enríquez for tests.

*star-1.5 (18 Apr 2008)

  18 Apr 2008; Peter Volkov <pva@gentoo.org> +star-1.5.ebuild:
  Version bump. Finally stable release!

  09 Apr 2008; nixnut <nixnut@gentoo.org> star-1.5_alpha88.ebuild:
  Stable on ppc wrt bug #216658

  08 Apr 2008; Raúl Porcel <armin76@gentoo.org> star-1.5_alpha88.ebuild:
  ia64/sparc/x86 stable wrt #216658
