@@ -1,7 +1,7 @@
 AUX star-1.5-glibc-2.10.patch 3375 RMD160 e1a86e7bb7c09273b15798b632dd942c45046029 SHA1 ac948328b9caf98ea93a51a4a49164199b41327b SHA256 7e3ba54e7be54b6779e7db3b94c0f33dd27b2441396da87ed3a1aabe8a1ab40f
 DIST star-1.5.1.tar.bz2 824489 RMD160 5046551136bd990ba646d7de7de30f353ff31c8b SHA1 62ba0e0a995fc5deb492b025ecffe58735574b8a SHA256 918cf5d7f2285104990d608dd3e8873a10c60fa56fd21c9b527d6829dea3828e
 DIST star-1.5.tar.bz2 783704 RMD160 88889ca5d0d7fd99094e614c08fc59f85ea50134 SHA1 83f00d740b3feeafc741dfde5287cc319cfd6b9a SHA256 6dbb345d75c88d70ebdea04b13b80d7f3e9cf5d29316d803a355afd03df2723f
-EBUILD star-1.5.1.ebuild 2403 RMD160 5bf5b50744f9612b314ed7ee8201dc7461c68826 SHA1 519e60425bdd5ed86d42a631b166826a16894061 SHA256 70ff19589323917ef354befb9224fa5265f05c720b26df45f42ebdd24d9a5819
+EBUILD star-1.5.1.ebuild 2759 RMD160 0c9369f9679a6b9a7fb18c2ce059d88aaa8de04f SHA1 bb5b62d82a1d1632a0b344239c3784d13edcb6c2 SHA256 387538f8a7c9512ea86066f57ead84c40728d1b065d2f194ab249112af19884c
 EBUILD star-1.5.ebuild 2454 RMD160 be074ec665ad8e937276fa85c3a251a4b83c4bf6 SHA1 f387958166cb49d874149892811aeea7617ca00f SHA256 e760f9eca716eda2100b471fc10d2fd958cc3f5b5f144e62fc3292c6bfd3aa80
-MISC ChangeLog 12557 RMD160 081f22b3417632e73ad7935744784a9f5f5d0af3 SHA1 568103875ba1215d3e77de487f5a64f8faabf0bd SHA256 e2f0714f30fc11b3f1e1634f0ae52ae5804973faa76a685b5fd990b96b79b974
+MISC ChangeLog 12665 RMD160 bf5b0e7a4722cd404aee0b5040b84dc464046c6f SHA1 8087f5e9ed276d3660f05869bea7a145a7ef958e SHA256 22530681326ca30d4716a51c3735919184a1ecda2ef879187ecea8339e726a33
 MISC metadata.xml 261 RMD160 0fda4cfbfc0b5d3ea850fa052c66371650f05a37 SHA1 1272cab2f6a129292510984a393ebdb168b21262 SHA256 3eaccb04cb08aff8a179203a18ef283f88bbf820dcb27f10b0211d55ebddbc7a
